--- a/src/content/demos/webgl-cube-playground/index.mdx
+++ b/src/content/demos/webgl-cube-playground/index.mdx
@@ -4,6 +4,6 @@ date: 2022-01-02
 tags: ["webgl", "threejs", "react"]
 ---
 
-import WebGLCubeDemo from '../../../components/demos/WebGLCubeDemo.tsx';
+import WebGLCubeDemo from '../../../components/demos/WebGLCubeDemo.astro';
 
-<WebGLCubeDemo client:visible />
+<WebGLCubeDemo />
